--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gisbank</h1>
-      <h2 class="project-tagline">GIS-BANK</h2>
+      <h2 class="project-tagline">GIS-BANK TEST</h2>
       <a href="https://github.com/TurtleMrLee/GISBANK" class="btn">View on GitHub</a>
       <a href="https://github.com/TurtleMrLee/GISBANK/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/TurtleMrLee/GISBANK/tarball/master" class="btn">Download .tar.gz</a>
